--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: 16.x
 
       - name: Install NPM packages
-        run: npm ci
+        run: npm install
 
       - name: Build Next.js app
         run: npm run build
