--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,10 @@ jobs:
       - name: Install NPM packages
         run: npm install
 
-      - name: Build Next.js app
-        run: npm run build
-        env:
-          URL_PREFIX: myapp
+#       - name: Build Next.js app
+#         run: npm run build
+#         env:
+#           URL_PREFIX: myapp
 
       - name: Export Next.js app
         run: npm run export
