--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,17 +21,17 @@ jobs:
       - name: Install NPM packages
         run: npm install
 
-#       - name: Build Next.js app
-#         run: npm run build
+      - name: Build Next.js app
+        run: npm run build
 #         env:
 #           URL_PREFIX: myapp
-      - name: Build Next.js app
-        run: npm run dev
-#       - name: Export Next.js app
-#         run: npm run export
+#       - name: Build Next.js app
+#         run: npm run dev
+      - name: Export Next.js app
+        run: npm run export
 
-#       - name: Deploy to GitHub Pages
-#         uses: peaceiris/actions-gh-pages@v3
-#         with:
-#           github_token: ${{ secrets.GITHUB_TOKEN }}
-#           publish_dir: out
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: out
