--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,20 +18,17 @@ jobs:
         with:
           node-version: 16.x
 
-      - name: Install NPM packages
-        run: npm install
-
-      - name: Build Next.js app
+      - name: Install dependencies
+        run: npm ci
+      - name: build
         run: npm run build
-#         env:
-#           URL_PREFIX: myapp
-#       - name: Build Next.js app
-#         run: npm run dev
-      - name: Export Next.js app
+      - name: export static html
         run: npm run export
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: jekyll
+        run: touch ./.nojekyll
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: out
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: master
+          FOLDER: out
